[package]
name = "libp2p-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.51.0", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"

